apps/app-proxy/overlays/codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: codefresh-cap-app-proxy
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: a0057f75981b842fda4cd7ee5ee68daf-46a1dc73e8c94337.elb.us-east-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
